--- a/JavaProjectj/test.html
+++ b/JavaProjectj/test.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset='UTF-8'><title>Insert title here</title></head><body><table border='1'><tr><td>180</td><td>Kleines 1 Familien Haus</td><td>23</td><td><img src=AlphaUpdate.jpg width='190' height='108'></td></tr><tr><td>180</td><td>Kleines 1 Familien Haus</td><td>23</td><td><img src=AlphaUpdate.jpg width='190' height='108'></td></tr></table></body></html>
+<meta charset='UTF-8'><title>Insert title here</title></head><body><table border='1'><tr><td>180</td><td>Kleines 1 Familien Haus</td><td>23</td><td><button><img src=AlphaUpdate.jpg width='190' height='108'></button></td></tr><tr><td>180</td><td>Kleines 1 Familien Haus</td><td>23</td><td><button><img src=AlphaUpdate.jpg width='190' height='108'></button></td></tr><tr><td>180</td><td>Kleines 1 Familien Haus</td><td>23</td><td><button><img src=AlphaUpdate.jpg width='190' height='108'></button></td></tr></table></body></html>
